# srt2dvbsub

./: BUILD.md  DETAILS.txt  LICENSE.md  Makefile.am  README.md  README.txt  WORKFLOW.md  configure.ac
build_mac/: dvdbr2dvbsub
docs/: RELEASENOTES.md  ROADMAP.md  todo.md
ideas/: LIVE_SUBTITLING_UDP_RTP_IDEA.md
src/: alloc_utils.c  alloc_utils.h  batch_encode.c  batch_encode.h  bench.c  bench.h  cpu_count.c  cpu_count.h  debug.h  debug_png.c  debug_png.h  delay_parse.c  delay_parse.h  dvb_lang.c  dvb_lang.h  dvb_sub.c  dvb_sub.h  dvdbr2dvbsub.c  fontlist.c  fontlist.h  graphic_sub_mux.c  lang_parse.c  lang_parse.h  main.c  main_works.c  mux_write.c  mux_write.h  muxsub.c  muxsub.h  palette.h  png_path.c  png_path.h  pool_alloc.c  pool_alloc.h  progress.c  progress.h  qc.c  qc.h  render_ass.c  render_ass.h  (+16 more)
test/: run_hd.sh
testharness/: alloc_bench.c  pthread_create_fail.c  render_pool_shutdown_test.c  render_pool_sync_vs_shutdown_test.c  render_pool_test.c  srt_parser_test.c  test_hex_color.c  test_palette_transparent.c  test_qc.c  test_render_ass  test_render_ass.c  test_render_pango.c  test_threaded_stress.c  test_tile_validation.c  valgrind.supp
testsrt/: srt_language_test.srt
tools/: render_pool_shutdown_test.c  render_pool_sync_vs_shutdown_test.c  rp_partial_create_test.c
